_sass/minima/_feed.scss
//This is the styling for a featured post.

.featured-post .feed-card {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 250px;
    column-gap: 10px;
    margin-top: 10px;
    border-top: lightgray;
    border-width: 1px;
    border-top-style: solid;

    .card-content{
        display:grid;
        grid-template-rows: min-content auto min-content;
        background-color: black;
        grid-template-areas: 
            "title"
            "excerpt"
            "date";
    }

    .card-title{
        grid-area: title;
        align-content: start;
    }

    .card-excerpt{
        grid-area: excerpt;
        align-content: start;
    }

    .card-date{
        grid-area: date;
        align-content: end;
    }
    
    //Styling
    .featured-image {
        width:100%;
        height:100%;
        object-fit: cover;
        
    }

    .post-link {
        font-weight: bold;
        font-size: 24pt;
        color: white;
        &:link { color:white; }
        &:visited { color:white; }
        &:hover { color:white; }
        text-decoration: none;
    }

    .excerpt{
        font-style: italic;
        color: white;
    }

    .date{
        color: darkgray;
        font-size: 8pt;
    }
}

//This is the styling for a feed.
.feed .feed-card {
    display: grid;
    grid-template-columns: 110px 1fr;
    grid-template-rows: 110px;
    column-gap: 10px;
    margin-top: 10px;
    border-top: lightgray;
    border-width: 1px;
    border-top-style: solid;

    .card-content{
        display:grid;
        grid-template-rows: min-content auto min-content;
        grid-template-areas: 
            "title"
            "excerpt"
            "date";
    }

    .card-title{
        grid-area: title;
        align-content: start;
    }

    .card-excerpt{
        grid-area: excerpt;
        align-content: start;
    }

    .card-date{
        grid-area: date;
        align-content: end;
    }
    
    //Styling

    .featured-image {
        width:100%;
        height:100%;
        object-fit: cover;
        
    }

    .post-link {
        font-weight: bold;
        font-size: 14pt;
        color: black;
        &:link { color:black; }
        &:visited { color:black; }
        &:hover { color:black; }
        text-decoration: none;
    }
    
    .excerpt{
        font-style: italic;
    }

    .date{
        color: darkgray;
        font-size: 8pt;
    }
}

